--- a/src/Themes.css
+++ b/src/Themes.css
@@ -6,14 +6,14 @@
     
     /* Colors */
     --color-primary: #011A27;
-   
+    --color-user-hover:#eee533;
     --color-secundary: #085680;
     --color-secundary-submenu:#175551;
     --color-background-dark:rgb(2,28,30);
     --color-background-dark-transparente: rgb(2,28,30,0.85);
     --color-background-light:rgb(234, 226, 226);
     --color-hover:#6fb98f;
-    --color-logout:rgb(247, 235, 68);
+    --color-active:rgb(247, 235, 68);
     /* Shadows */
     --shadow-sm: 0px 0px 8px rgba(69, 69, 69, 0.3);
     --shadow-md: 0px 0px 16px rgba(69, 69, 69, 0.5);
