--- a/src/assets/components/sections/directorio/Directorio.module.css
+++ b/src/assets/components/sections/directorio/Directorio.module.css
@@ -3,6 +3,16 @@
     box-sizing: border-box; /* Asegura que el padding y el border se incluyan en el tamaño total */
 }
 
+.containerDirectorio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    padding: 20px;
+    gap: 20px;
+}
+
+
 nav a {
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
@@ -38,7 +48,25 @@ nav a {
 .navbar a:hover {
     background-color: var(--color-secundary); /* Color de fondo al hacer hover sobre el <a> */
 }
+.navButton {
+    background: none;
+    border: none;
+    color: white;
+    font: inherit;
+    cursor: pointer;
+    padding: 15px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1rem;
+    border-radius: 0px;
+  }
 
+
+  
+  .navButton:hover {
+    background-color: var(--color-secundary);
+  }
 .isActive {
     font-weight: bold; /* Mantiene el texto en negrita */
     background-color: var(--color-secundary);
