--- a/src/assets/components/authentications/Login.module.css
+++ b/src/assets/components/authentications/Login.module.css
@@ -1,48 +1,70 @@
+/* Login.module.css */
 .loginContainer {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .loginContainer h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .formGroup {
-    margin-bottom: 15px;
-  }
-  
-  .formGroup label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .formGroup input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  .error {
-    color: red;
-    margin-top: 10px;
-    text-align: center;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  margin-top: 80px;
+  height: 100vh;
+  background-image: url('../../../../public/fondo_login.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.loginContainer h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formContainer {
+  background-color: rgba(176, 198, 204, 0.9); /* Fondo blanco semitransparente */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 6px 9px rgba(0, 0, 0, 0.6); /* Sombra */
+  max-width: 400px;
+  width: 100%;
+}
+
+.formGroup {
+  margin-bottom: 15px;
+}
+
+.formGroup label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
+.formGroup input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #063852;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s;
+  box-shadow: 0 0 0 2px transparent; 
+}
+
+button:hover {
+  color: #063852;
+  background-color: #eeac6a;
+  box-shadow: 0 0 0 2px #063852; 
+}
+.error {
+  color: red;
+  margin-top: 10px;
+  text-align: center;
+
+}
+
+.error.show {
+  opacity: 1;
+  margin-bottom: 10px;
+}
