--- a/src/assets/components/sections/directorio/Directorio.module.css
+++ b/src/assets/components/sections/directorio/Directorio.module.css
@@ -79,61 +79,71 @@ nav a {
     pointer-events: none; /* Desactiva los eventos del enlace activo */
 }
 
-/* Añadimos estilos para el headerRowTable y header elementos */
+
+/* Estilos para la tabla de directorio*/
 .headerRowTable {
-    display: flex;
-    font-weight: bold;
-    margin-bottom: 10px;
-    padding-right: 15px;
-padding-left: 15px;
-    justify-content: center; /* Distribuye los elementos equitativamente */
-    width: 100%; /* Asegura que ocupe todo el ancho disponible */
-   
-  }
-  
-.containerListRow{
-max-height: 550px;
-overflow-y: auto;
-width: 100%;
-overflow-x: hidden;
-padding-right: 15px;
-padding-left: 15px;
-border: 1px solid black;
-border-radius: 5px;
-box-shadow: 11px 9px 8px -8px rgba(0,0,0,0.45);
+  display: flex;
+  font-weight: bold;
+  margin-bottom: 10px;
+  padding: 10px 0; /* Ajustamos el padding */
+  width: calc(100% + 17px); /* Asegura que ocupe todo el ancho disponible */
+  border: 1px solid black; /* Línea separadora */
+  border-radius: 5px;
+  box-shadow: 11px 9px 8px -8px rgba(0, 0, 0, 0.45);
 }
 
-  .containerFila{
-    display: flex;
-    justify-content: center; /* Distribuye los elementos equitativamente */
-    width: 100%; /* Asegura que ocupe todo el ancho disponible */
-    padding: 10px 0; /* Añade un poco de relleno arriba y abajo */
-    border-bottom: 1px solid #ddd; /* Línea para separar cada fila */
-    transition: background-color ease 0.2s;
-  }
+.containerListRow {
+  max-height: 550px;
+  overflow-y: scroll;
+  width: calc(100% + 17px);
+  overflow-x: hidden;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 11px 9px 8px -8px rgba(0, 0, 0, 0.45);
+}
 
+.containerFila {
+  display: flex;
+  width: 100%;
+  padding: 15px 0;
+  border-bottom: 1px solid #ddd;
+  transition: background-color ease 0.2s;
+}
 
+/* Asegurar que cada columna tiene el mismo tamaño */
+.puesto, .nombre, .apellidos, .telefono, .extension, .correo, .editar,
+.HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
+  flex: 1; /* Igual distribución del espacio */
+  min-width: 150px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
 
-  .puesto, .nombre, .apellidos, .telefono, .extension, .correo, .HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
-    flex: 1;
-    min-width: 170px;
-    text-align: center; /* Centra el texto */
-  }
+.edit{
+  margin-left: 25px;
+  margin-right: 10px;
+}
+
 /* Media queries para pantallas más pequeñas */
 @media (max-width: 768px) {
-  .puesto, .nombre, .apellidos, .telefono, .extension, .correo, .HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
-      min-width: 100px; /* Ajusta el ancho mínimo para pantallas más pequeñas */
+  .puesto, .nombre, .apellidos, .telefono, .extension, .correo, .editar,
+  .HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
+      min-width: 100px;
   }
 }
 
 @media (max-width: 480px) {
-  .puesto, .nombre, .apellidos, .telefono, .extension, .correo, .HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
-      flex: 1 1 100%; /* Hace que cada columna ocupe el 100% del ancho */
-      min-width: auto; /* Elimina el ancho mínimo */
+  .puesto, .nombre, .apellidos, .telefono, .extension, .correo, .editar,
+  .HeaderPuesto, .HeaderNombre, .HeaderApellidos, .HeaderTelefono, .HeaderExtension, .HeaderCorreo, .HeaderEditar {
+      flex: 1 1 100%;
+      min-width: auto;
   }
 
   .containerFila {
-      flex-direction: column; /* Cambia la dirección de los elementos a columna */
-      align-items: flex-start; /* Alinea los elementos al inicio */
+      flex-direction: column;
+      align-items: flex-start;
   }
 }
