--- a/src/assets/components/sections/directorio/FormEditar.module.css
+++ b/src/assets/components/sections/directorio/FormEditar.module.css
@@ -2,13 +2,29 @@
 .form {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding-top:0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
   }
+
+  .formTitle {
+    text-align: center;
+    margin-bottom: 10px;
+    color: var(--color-primary);
+    font-size: 24px;
+    font-weight: bold;
+}
   
   .form .row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+  }
+  .form .row:first-child{
+    margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
   }
   
   .form .column {
@@ -21,13 +37,17 @@
   }
   
   .form label {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    padding: 5px;
     font-weight: bold;
   }
   
   .form input {
     padding: 8px;
     font-size: 16px;
+    text-align: center;
+    margin-bottom: 15px;
     border-radius: 5px;
     border: 1px solid #ccc;
     width: 100%; /* Asegura que los inputs ocupen todo el espacio disponible */
