--- a/src/assets/components/sections/directorio/FormAgregarUserDirectorio.module.css
+++ b/src/assets/components/sections/directorio/FormAgregarUserDirectorio.module.css
@@ -1,68 +1,63 @@
-/* FormAgregarUserDirectorio.module.css */
-.form {
-    display: flex;
-    flex-direction: column;
-    padding-top: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-  }
-  
-  .formTitle {
-    text-align: center;
-    margin-bottom: 10px;
-    color: var(--color-primary);
-    font-size: 24px;
-    font-weight: bold;
-  }
-  
-  .form .row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
-  }
-  
-  .form .row:first-child {
-    margin-bottom: 30px;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .form .column {
-    flex: 1;
-    margin-right: 10px;
-  }
-  
-  .form .column:last-child {
-    margin-right: 0;
-  }
-  
-  .form label {
-    margin-bottom: 15px;
-    margin-right: 10px;
-    padding: 5px;
-    font-weight: bold;
-  }
-  
-  .form input {
-    padding: 8px;
-    font-size: 16px;
-    text-align: center;
-    margin-bottom: 15px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%; /* Asegura que los inputs ocupen todo el espacio disponible */
-  }
-  
-  .form input::placeholder {
-    color: #aaa;
-    font-style: italic;
-  }
+.form .row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  align-items: center; /* Asegura alineación vertical */
+}
+
+.form h2{
+width: 100%;
+text-align: center;
+margin: 0;
+}
+.form .column {
+  flex: 1;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column; /* Hace que label e input/select estén en columna */
+}
+
+/* Quita margen derecho de la última columna */
+.form .column:last-child {
+  margin-right: 0;
+}
+
+/* Mantiene el diseño en columna y evita desajustes */
+.oficinaContainer {
+  flex: 1; /* Hace que tenga el mismo tamaño que los otros inputs */
+  display: flex;
+  flex-direction: column;
+}
+
+/* Mantiene los estilos originales pero asegura uniformidad */
+.form input, 
+.oficinaContainer select {
+  padding: 8px; /* Mantiene tu padding */
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 40px; /* Asegura que el input y el select sean iguales */
+  text-align: center;
+  background-color: white; /* Respeta tu fondo */
+}
+
+/* Ajuste en los labels */
+.form label {
+  margin-bottom: 8px; /* Pequeño margen para mejor separación */
+  font-weight: bold;
+  padding: 5px;
+  color: var(--color-primary); /* Mantiene tu color */
+}
+
+
+
   
   .form button {
     padding: 10px;
+    margin-top: 15px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #286bc2;
     color: white;
     border: none;
     border-radius: 5px;
@@ -71,5 +66,5 @@
   }
   
   .form button:hover {
-    background-color: #45a049;
+    background-color: #0d4794;
   }
