--- a/src/assets/components/sections/directorio/FormDelete.module.css
+++ b/src/assets/components/sections/directorio/FormDelete.module.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   
     max-width: 500px;
     margin: 0 auto;
   }
@@ -39,7 +39,14 @@
   }
   
   .userInfo p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 5px 0;
+    
+  }
+  .userInfo p strong{
+    margin-right: 5px;
   }
   
   .warningText {
